# gfx

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  run.cmd  run.sh
include/: gfx  gfx.hpp
include/algorithm/projection/: projection_plane_3.hpp
include/common/: common.hpp  reflection.hpp
include/core/: core.hpp
include/core/geometry/: bounded_domain_2.hpp  domain.hpp  (+17 more)
include/generic/: all
include/geometry/: bounded_domain_1.hpp  bounded_domain_2.hpp  bounded_parametric_curve.hpp  bounded_parametric_curve_2.hpp  bounded_parametric_curve_3.hpp  circle.hpp  circle_2.hpp  circle_3.hpp  circular_domain.hpp  curve.hpp  domain.hpp  domain_1.hpp  domain_2.hpp  ellipse.hpp  ellipse_2.hpp  ellipse_3.hpp  expression_curve_2.hpp  expression_curve_3.hpp  geometry.hpp  hyperbola.hpp  infinite_domain_1.hpp  infinite_domain_2.hpp  line.hpp  line_2.hpp  parabola.hpp  parabola_3.hpp  parametric_curve.hpp  parametric_curve_2.hpp  parametric_curve_3.hpp  parametric_surface.hpp  parametric_surface_3.hpp  periodic_domain_1.hpp  plane_3.hpp  point.hpp  point_2.hpp  polyline.hpp  polyline_2.hpp  range_space_2.hpp  segmented_parametric_curve.hpp  surface.hpp  (+3 more)
include/math/: equation.hpp  euclidean_space_0.hpp  euclidean_space_1.hpp  euclidean_space_3.hpp  euclidean_space_4.hpp  expression.hpp  float32.hpp  float64.hpp  float_system.hpp  frame_3.hpp  linear_space.hpp  polynomial.hpp  polynomial_equation.hpp  range_2.hpp  unit_vector_2.hpp  unit_vector_3.hpp  unit_vector_4.hpp  vector_0.hpp  vector_1.hpp  vector_2.hpp  vector_3.hpp  vector_4.hpp
source/: main.cpp
(+104 files in other folders)
